# mailoney

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  alt_mailoney  commit_message.txt  docker-compose.yml  install.sh  mailoney.py  main.py  pyproject.toml  requirements.txt  requirments.txt  start.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml
core/: mailserver.py  ui.py  utils.py
mailoney/: __init__.py  config.py  core.py  db.py  mail_storage.py
mailoney/migrations/: __init__.py  env.py
mailoney/migrations/versions/: 1a5b9822e49c_initial_migration.py  b519325d1f2b_add_destination_ip_and_port_to_sessions.py
main/: main_guts_stuff.py
modules/: __init__.py  open_relay.py  postfix_creds.py  schizo_open_relay.py
src/mailoney/: __init__.py  config.py  db.py  server.py
src/mailoney/migrations/: env.py
tests/: conftest.py  test_config.py  test_core.py  test_data_handling.py  test_db.py
